<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.practicaandroid.ui.Movie.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_media_final" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.practicaandroid.ui.Serie.SeriesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_media_final" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.practicaandroid.ui.Favorites.FavouritesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favoritos" />
</navigation>