<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vistaPeli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#223951"
        tools:context=".MovieActivity">


        <ImageView
            android:id="@+id/movieImage"
            android:layout_width="994dp"
            android:layout_height="644dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.265"
            app:srcCompat="@mipmap/ic_launcher" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="412dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="324dp"
            android:background="#223951"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="44dp"
                android:textColor="@color/colorGray"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RatingBar
                android:id="@+id/ratingBar2"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="#727A85"
                android:progressBackgroundTint="#FFD600"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.757"
                app:layout_constraintStart_toEndOf="@+id/bt_watch"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/sinopsis"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:lineSpacingExtra="8sp"
                android:textColor="@color/colorGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.63"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommend_series"
                android:layout_width="406dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sinopsis"></androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_studio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/studio"
                android:textColor="@color/colorGray"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_recommend_series" />


            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:text="@string/genre"
                android:textColor="@color/colorGray"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/genre" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_casting"
                android:layout_width="406dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/release"></androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="15dp"
                android:text="@string/release"
                android:textColor="@color/colorGray"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genre" />

            <TextView
                android:id="@+id/tv_similar_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="45dp"
                android:text="@string/similar_movies"
                android:textColor="@color/colorGray"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/release" />

            <TextView
                android:id="@+id/studio"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:textColor="@color/colorGray"
                app:layout_constraintStart_toEndOf="@+id/tv_studio"
                app:layout_constraintTop_toBottomOf="@+id/rv_recommend_series" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorGray"
                app:layout_constraintStart_toEndOf="@+id/tv_genre"
                app:layout_constraintTop_toBottomOf="@+id/studio" />

            <TextView
                android:id="@+id/release"
                android:layout_width="306dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorGray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genre" />

            <Button
                android:id="@+id/bt_watch"
                android:layout_width="126dp"
                android:layout_height="47dp"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/border_button"
                android:text="WATCH NOW"
                android:textColor="@color/colorGray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/cb_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:button="@drawable/checkbox_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="35dp"
            android:layout_height="23dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/ic_backspace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>