<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkBlue"
        tools:context="com.example.practicaandroid.MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@color/colorLightBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tv_greeting"
                android:layout_width="279dp"
                android:layout_height="76dp"
                android:layout_marginStart="59dp"
                android:layout_marginLeft="59dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:text="@string/greeting"
                android:textColor="@color/colorGray"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_search"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_greeting" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="492dp"
                android:layout_height="436dp"
                android:background="@color/colorDarkBlue"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="280dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/esquinas_redondeadas"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_recommend_movies"
                        android:layout_width="0dp"
                        android:layout_height="310dp"
                        android:layout_marginTop="68dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_recommend_series"></androidx.recyclerview.widget.RecyclerView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_recommend_series"
                        android:layout_width="406dp"
                        android:layout_height="308dp"
                        android:layout_marginTop="56dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"></androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/tv_top_rated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/top_rate"
                        android:textColor="@color/colorGray"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/rv_recommend_movies"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_recommend_series"
                        app:layout_constraintVertical_bias="0.878" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/recommended"
                        android:textColor="@color/colorGray"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/rv_recommend_series"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="88dp"
                        android:layout_marginEnd="180dp"
                        android:layout_marginRight="180dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_busqueda"
            android:layout_width="319dp"
            android:layout_height="156dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="240dp"
            android:layout_x="47dp"
            android:layout_y="238dp"
            android:background="@drawable/esquinas_redondeadas_finding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>